src/objects/TASKRAY__trBoardPowerFilter__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trContextUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Context User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Board_Power_Filter_Context</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectFilterString__c</fullName>
        <label>Project Filter (Default Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Filter</label>
        <referenceTo>TASKRAY__trBoardFilter__c</referenceTo>
        <relationshipName>TaskRay_Project_Filter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskFilterString__c</fullName>
        <label>Task Filter (Default Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Filter</label>
        <referenceTo>TASKRAY__trBoardFilter__c</referenceTo>
        <relationshipName>TaskRay_Task_Filter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Power Filter for User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Board_Power_Filter</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Board Power Filter</label>
    <listViews>
        <fullName>TASKRAY__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TaskRay Board Power Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Board Power Filter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>